force-app/main/default/objects/OutputMNFProcess__c/OutputMNFProcess__c.object-meta.xml
<CustomObject>
    <label>Output (MNF Process)</label>
    <nameField>
        <displayFormat>OP-{000000}</displayFormat>
        <label>Output (MNF Process)</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Output (MNF Process)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>