force-app/main/default/objects/OutputMNFProcess__c/fields/Expirationdate__c.field-meta.xml
<CustomField>
    <fullName>Expirationdate__c</fullName>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>