force-app/main/default/objects/OutputMNFProcess__c/fields/TotalSelling__c.field-meta.xml
<CustomField>
    <fullName>TotalSelling__c</fullName>
    <formula>UnitSelling__c * Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Selling</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>